--- a/public/zookeepers.html
+++ b/public/zookeepers.html
@@ -26,6 +26,7 @@
         <a class="btn col-12 col-md-auto mx-2" href="/animals">View Animals</a>
       </div>
     </section>
+          <button class="btn">Get Zookeepers</button>
 
     <section class="my-2 flex-row justify-space-between">
       <div class="col-12 bg-dark p-3">
